--- a/Project/index.html
+++ b/Project/index.html
@@ -22,7 +22,9 @@
     </div>
 
     <!-- Task display area -->
-    <div id="task-display"></div>
+    <div id="task-display">
+        <!-- Task content will be dynamically displayed here -->
+    </div>
 
     <footer>
         <div class="footer-content">
