--- a/Project/index.html
+++ b/Project/index.html
@@ -12,18 +12,19 @@
         <h1>DYNAMIC PROJECT GALLERY</h1>
     </header>
 
-    <!-- Centered "My Tasks" Heading -->
     <div class="tasks-heading">
         <h2>My Tasks</h2>
     </div>
 
     <div class="thumbnails" id="task-list">
-        <!-- Task boxes will be dynamically loaded here -->
-    </div>
+        </div>
 
-    <!-- Task display area -->
-    <div id="task-display">
-        <!-- Task content will be dynamically displayed here -->
+    <div id="task-modal" class="modal">
+        <div class="modal-content">
+            <span class="close-button">&times;</span>
+            <div id="modal-task-details">
+                </div>
+        </div>
     </div>
 
     <footer>
