--- a/Project/index.html
+++ b/Project/index.html
@@ -17,13 +17,16 @@
     </div>
 
     <div class="thumbnails" id="task-list">
-        </div>
+        <!-- Task thumbnails will be loaded dynamically here -->
+    </div>
 
+    <!-- Modal -->
     <div id="task-modal" class="modal">
         <div class="modal-content">
             <span class="close-button">&times;</span>
             <div id="modal-task-details">
-                </div>
+                <!-- Task details will be loaded here -->
+            </div>
         </div>
     </div>
 
