--- a/Project/index.html
+++ b/Project/index.html
@@ -17,16 +17,13 @@
     </div>
 
     <div class="thumbnails" id="task-list">
-        <!-- Task thumbnails will be loaded dynamically here -->
+        <!-- Task items will be dynamically inserted here -->
     </div>
 
-    <!-- Modal -->
     <div id="task-modal" class="modal">
         <div class="modal-content">
             <span class="close-button">&times;</span>
-            <div id="modal-task-details">
-                <!-- Task details will be loaded here -->
-            </div>
+            <div id="modal-task-details"></div>
         </div>
     </div>
 
