--- a/Project/index.html
+++ b/Project/index.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>DYNAMIC PROJECT GALLERY</title>
+    <title>Dynamic Project Gallery</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+
     <header>
         <h1>DYNAMIC PROJECT GALLERY</h1>
     </header>
@@ -17,8 +18,10 @@
     </div>
 
     <div class="thumbnails" id="task-list">
-        </div>
+        <!-- Task items will be inserted here dynamically -->
+    </div>
 
+    <!-- Modal for displaying task content -->
     <div id="task-modal" class="modal">
         <div class="modal-content">
             <span class="close-button">&times;</span>
