--- a/Project/index.html
+++ b/Project/index.html
@@ -3,12 +3,11 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Dynamic Project Gallery</title>
+    <title>DYNAMIC PROJECT GALLERY</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-
     <header>
         <h1>DYNAMIC PROJECT GALLERY</h1>
     </header>
@@ -18,14 +17,13 @@
     </div>
 
     <div class="thumbnails" id="task-list">
-        <!-- Task items will be inserted here dynamically -->
+        <!-- Task items will be dynamically inserted here -->
     </div>
 
-    <!-- Modal for displaying task content -->
     <div id="task-modal" class="modal">
         <div class="modal-content">
             <span class="close-button">&times;</span>
-            <div id="modal-task-details"></div>
+           -details"></div>
         </div>
     </div>
 
