--- a/Project/index.html
+++ b/Project/index.html
@@ -17,13 +17,13 @@
     </div>
 
     <div class="thumbnails" id="task-list">
-        <!-- Task items will be dynamically inserted here -->
-    </div>
+        </div>
 
     <div id="task-modal" class="modal">
         <div class="modal-content">
             <span class="close-button">&times;</span>
-           -details"></div>
+            <div id="modal-task-details">
+                </div>
         </div>
     </div>
 
