--- a/Project/index.html
+++ b/Project/index.html
@@ -1,48 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>DYNAMIC PROJECT GALLERY</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="stylesheet" href="style.css" />
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>DYNAMIC PROJECT GALLERY</title>
+  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
-    <header>
-        <h1>DYNAMIC PROJECT GALLERY</h1>
-    </header>
+  <header>
+    <h1>DYNAMIC PROJECT GALLERY</h1>
+  </header>
 
-    <div class="tasks-heading">
-        <h2>My Tasks</h2>
+  <div class="tasks-heading">
+    <h2>My Tasks</h2>
+  </div>
+
+  <div class="thumbnails" id="task-list"></div>
+
+  <div id="task-modal" class="modal">
+    <div class="modal-content">
+      <span class="close-button">&times;</span>
+      <div id="modal-task-details"></div>
     </div>
+  </div>
 
-    <div class="thumbnails" id="task-list">
-        </div>
-
-    <div id="task-modal" class="modal">
-        <div class="modal-content">
-            <span class="close-button">&times;</span>
-            <div id="modal-task-details">
-                </div>
-        </div>
+  <footer>
+    <div class="footer-content">
+      <div class="footer-left">
+        <p>Dynamic Project Gallery</p>
+      </div>
+      <div class="footer-center">
+        <a href="https://www.linkedin.com" target="_blank" class="footer-icon"><i class="fab fa-linkedin"></i></a>
+        <a href="https://twitter.com" target="_blank" class="footer-icon"><i class="fab fa-x"></i></a>
+        <a href="https://www.instagram.com" target="_blank" class="footer-icon"><i class="fab fa-instagram"></i></a>
+      </div>
+      <div class="footer-right">
+        <p>rmukkala@aum.edu</p>
+      </div>
     </div>
+  </footer>
 
-    <footer>
-        <div class="footer-content">
-            <div class="footer-left">
-                <p>Dynamic Project Gallery</p>
-            </div>
-            <div class="footer-center">
-                <a href="https://www.linkedin.com" target="_blank" class="footer-icon"><i class="fab fa-linkedin"></i></a>
-                <a href="https://twitter.com" target="_blank" class="footer-icon"><i class="fab fa-x"></i></a>
-                <a href="https://www.instagram.com" target="_blank" class="footer-icon"><i class="fab fa-instagram"></i></a>
-            </div>
-            <div class="footer-right">
-                <p>rmukkala@aum.edu</p>
-            </div>
-        </div>
-    </footer>
-
-    <script src="script.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
